# pump-it-solana-now

./: README-Production.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
solana-program/: Anchor.toml  client.ts
solana-program/programs/fee-wrapper/: Cargo.toml
solana-program/programs/fee-wrapper/src/: lib.rs
src/: App.tsx  index.css  main.tsx
src/components/: AIMemeGenerator.tsx  AIQuickLaunchModal.tsx  AISuggestions.tsx  AchievementBadge.tsx  AchievementDisplay.tsx  AdminAnalytics.tsx  AdminAuthModal.tsx  AdminDashboard.tsx  AdminForumManagement.tsx  AdminSettings.tsx  AdminTokenManagement.tsx  AdminUserManagement.tsx  AdvancedTradingPanel.tsx  BanCheck.tsx  BondingCurvePanel.tsx  BondingCurveVisualization.tsx  BoostUpsell.tsx  ChatbotSidebar.tsx  CleanWalletButton.tsx  CreatePostModal.tsx  CreatorDashboard.tsx  CreatorEarningsPanel.tsx  DegenCoPilot.tsx  DisclaimerBanner.tsx  EnhancedPortfolioDashboard.tsx  ErrorBoundary.tsx  FloatingTokens.tsx  Footer.tsx  ForumCategoryCard.tsx  ForumPostCard.tsx  ForumsSidebar.tsx  HeroSection.tsx  ImageViewer.tsx  Leaderboard.tsx  MobileWalletButton.tsx  MoreDropdown.tsx  Navigation.tsx  PremiumDashboard.tsx  ProductionMonitor.tsx  QuickStart.tsx  (+13 more)
src/contexts/: ChatContext.tsx  WalletContext.tsx
src/hooks/: useAIImageGenerator.ts  useAIQuickLaunch.ts  useAIServices.ts  useAchievements.ts  useBondingCurve.ts  useClientTokenCreation.ts  useCreatorControls.ts  useCreatorEarnings.ts  useDegenCoPilot.ts  useEnhancedPortfolio.ts  useForums.ts  useHeliusAnalytics.ts  (+18 more)
supabase/: config.toml
(+102 files in other folders)
