[package]
name = "fee-wrapper"
version = "0.1.0"
description = "Fee wrapper for graduated tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fee_wrapper"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"